--- a/MyApp/angular.json
+++ b/MyApp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "af0c811f-b4e5-47bb-bf2f-11ab36b4fe22"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
