--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.3.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
